# wireless-vr-bridge

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
common/: CMakeLists.txt
common/include/wvb_common/: benchmark.h  global.h  image.h  io.h  ipc.h  macros.h  module.h  network_utils.h  packetizer.h  rtc.h  rtp.h  rtp_clock.h  sctp.h  server_shared_state.h  settings.h  socket.h  socket_addr.h  subprocess.h  video_encoder.h  video_socket.h  vr_structs.h  vrcp.h  vrcp_socket.h
common/include/wvb_common/dx11_utils/: dx11_common_utils.h  rgba_to_bgra.h  rgba_to_nv12.h
common/include/wvb_common/formats/: av1.h  ffmpeg.h  h264.h  hevc.h  media_codec.h  rtp_packetizer.h  simple_packetizer.h  vp9.h
common/src/: benchmark.cpp  image.cpp  io_android.cpp  io_desktop.cpp  ipc_posix.cpp  ipc_windows.cpp  module.cpp  rtc.cpp  rtp.cpp  sctp.cpp  server_shared_state.cpp  socket_addr.cpp  socket_posix.cpp  socket_windows.cpp  subprocess_windows.cpp  video_socket.cpp  vrcp.cpp  vrcp_socket.cpp
common/src/formats/: decoders.cpp  encoders.cpp  mediacodec_decoder.cpp  rtp_packetizer.cpp  simple_packetizer.cpp
common/src/formats/ffmpeg/: ffmpeg_cpu_encoder.cpp  ffmpeg_gpu_encoder.cpp
common/src/formats/h264/: h264_rtp_depacketizer.cpp  h264_rtp_packetizer.cpp
common/src/utils/: rgba_to_bgra.cpp  rgba_to_nv12.cpp
server/: CMakeLists.txt
server/include/wvb_server/: server.h
server/src/: server.cpp
tests/: basic_test.cpp  h264_decoder.cpp  ipc.cpp  ipc_events.cpp  local_client.cpp  main.cpp  modules.cpp  rgba_to_nv12.cpp  rtp_clock.cpp  sockets.cpp  tcp_socket.cpp  tcp_sockets.cpp  udp_socket.cpp  udp_sockets.cpp  video_socket.cpp  vrcp_socket.cpp  x264.cpp  x264_hw.cpp
tests/modules/: test_module.cpp
tests/resources/: av_packet.h264
tools/: wvb_driver_control.py  wvb_measurements.py
wvb_client/: CMakeLists.txt
wvb_client/include/wvb_client/: client.h  structs.h  vr_system.h
wvb_client/quest/: .gitignore  AndroidManifest.xml  CMakeLists.txt  VrApp.gradle  build.gradle  gradle.properties  settings.gradle
wvb_client/quest/java/com/wvb/xr_client/: MainActivity.java
wvb_client/quest/res/values/: strings.xml
wvb_client/quest/src/: main.cpp
wvb_client/shaders/: fullscreen.vert  texture_bgra.frag  texture_nv12.frag  texture_rgba.frag
wvb_client/src/: client.cpp  main.cpp  vr_system.cpp
wvb_driver/: CMakeLists.txt  driver.vrdrivermanifest  wvb_driver_control.py
wvb_driver/include/wvb_driver/: device_drivers.h  driver_logger.h  global_state.h  server_driver.h
wvb_driver/src/: device_drivers.cpp  driver_logger.cpp  openvr_driver.cpp  server_driver.cpp
wvb_server/: CMakeLists.txt  driver.vrdrivermanifest
wvb_server/include/wvb_server/: arg_parser.h  driver_logger.h  server.h  video_pipeline.h  vr_system.h
wvb_server/shaders/: rgba_to_bgra.comp.hlsl  rgba_to_nv12.comp.hlsl  rgba_to_yuva444.comp.hlsl
wvb_server/src/: arg_parser.cpp  main.cpp  server.cpp  video_pipeline_windows.cpp
wvb_server/src/driver/: driver_logger.cpp  openvr_driver.cpp
